--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img src="img/logo.jpg" alt="Logo" class="logo-img">
         </header>
 
-        <!-- <div class="wrapper">
+        <div class="wrapper">
             <a class="img-grid3 media">
                 <img src="img/AZ monogram.jpg" alt="work" class="media-img">
 
@@ -83,6 +83,6 @@
                     </div>
                 </div>
             </a>
-        </div> -->
+        </div>
     </body>
 </html>
