--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <!-- Meta -->
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <title>Matthew Goodyear</title>
 
@@ -10,6 +11,7 @@
 
         <!-- CSS -->
         <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet" type="text/css" href="css/flexboxgrid.css">
     </head>
 
 
@@ -24,65 +26,83 @@
         </header>
 
         <div class="wrapper">
-            <a class="img-grid3 media">
-                <img src="img/AZ monogram.jpg" alt="work" class="media-img">
+            <div class="row">
+                <div class="col-sm-4">
+                    <a class="media">
+                        <img src="img/AZ monogram.jpg" alt="work" class="media-img">
 
-                <div class="media-overlay">
-                    <div class="media-overlay-content">
-                        <p>Logo</p>
-                    </div>
+                        <div class="media-overlay">
+                            <div class="media-overlay-content">
+                                <p>Logo</p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
-            </a>
 
-            <a class="img-grid3 media">
-                <img src="img/AZ monogram.jpg" alt="work" class="media-img">
+                <div class="col-sm-4">
+                    <a class="media">
+                        <img src="img/AZ monogram.jpg" alt="work" class="media-img">
 
-                <div class="media-overlay">
-                    <div class="media-overlay-content">
-                        <p>Logo</p>
-                    </div>
+                        <div class="media-overlay">
+                            <div class="media-overlay-content">
+                                <p>Logo</p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
-            </a>
 
-            <a class="img-grid3 media">
-                <img src="img/AZ monogram.jpg" alt="work" class="media-img">
+                <div class="col-sm-4 col-xs-6">
+                    <a class="media">
+                        <img src="img/AZ monogram.jpg" alt="work" class="media-img">
 
-                <div class="media-overlay">
-                    <div class="media-overlay-content">
-                        <p>Logo</p>
-                    </div>
+                        <div class="media-overlay">
+                            <div class="media-overlay-content">
+                                <p>Logo</p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
-            </a>
+            </div>
 
-            <a class="img-grid3 media">
-                <img src="img/AZ monogram.jpg" alt="work" class="media-img">
+            <div class="row">
+                <div class="col-sm-4 col-xs-6">
+                    <a class="media">
+                        <img src="img/AZ monogram.jpg" alt="work" class="media-img">
 
-                <div class="media-overlay">
-                    <div class="media-overlay-content">
-                        <p>Logo</p>
-                    </div>
+                        <div class="media-overlay">
+                            <div class="media-overlay-content">
+                                <p>Logo</p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
-            </a>
 
-            <a class="img-grid3 media">
-                <img src="img/AZ monogram.jpg" alt="work" class="media-img">
+                <div class="col-sm-4">
+                    <a class="media">
+                        <img src="img/AZ monogram.jpg" alt="work" class="media-img">
 
-                <div class="media-overlay">
-                    <div class="media-overlay-content">
-                        <p>Logo</p>
-                    </div>
+                        <div class="media-overlay">
+                            <div class="media-overlay-content">
+                                <p>Logo</p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
-            </a>
 
-            <a class="img-grid3 media">
-                <img src="img/AZ monogram.jpg" alt="work" class="media-img">
+                <div class="col-sm-4">
+                    <a class="media">
+                        <img src="img/AZ monogram.jpg" alt="work" class="media-img">
 
-                <div class="media-overlay">
-                    <div class="media-overlay-content">
-                        <p>Logo</p>
-                    </div>
+                        <div class="media-overlay">
+                            <div class="media-overlay-content">
+                                <p>Logo</p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
-            </a>
+            </div>
         </div>
+        </div>
+            
     </body>
 </html>
