--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
         <!-- CSS -->
-        <link rel="stylesheet" type="text/css" href="css/main.css">
         <link rel="stylesheet" type="text/css" href="css/flexboxgrid.css">
+        <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
 
 
@@ -51,7 +51,7 @@
                     </a>
                 </div>
 
-                <div class="col-sm-4 col-xs-6">
+                <div class="col-sm-4">
                     <a class="media">
                         <img src="img/AZ monogram.jpg" alt="work" class="media-img">
 
@@ -65,7 +65,7 @@
             </div>
 
             <div class="row">
-                <div class="col-sm-4 col-xs-6">
+                <div class="col-sm-4">
                     <a class="media">
                         <img src="img/AZ monogram.jpg" alt="work" class="media-img">
 
@@ -102,7 +102,10 @@
                 </div>
             </div>
         </div>
-        </div>
-            
+
+        <footer>
+          <p>&copy; Matthew Goodyear 2017</p>
+        </footer>
+
     </body>
 </html>
