--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
         <!-- Fonts -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
+        <!-- Scripts -->
+        <script src="https://use.fontawesome.com/43b23a385d.js"></script>
+
         <!-- CSS -->
         <link rel="stylesheet" type="text/css" href="css/flexboxgrid.css">
         <link rel="stylesheet" type="text/css" href="css/main.css">
+
+
+
     </head>
 
 
@@ -105,6 +111,8 @@
 
         <footer>
           <p>&copy; Matthew Goodyear 2017</p>
+          <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
+          <i class="fa fa-500px fa-3x" aria-hidden="true"></i>
         </footer>
 
     </body>
