--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
         <!-- Fonts -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
-        <!-- Scripts -->
-        <script src="https://use.fontawesome.com/43b23a385d.js"></script>
-
         <!-- CSS -->
         <link rel="stylesheet" type="text/css" href="css/flexboxgrid.css">
         <link rel="stylesheet" type="text/css" href="css/main.css">
@@ -35,11 +32,11 @@
             <div class="row">
                 <div class="col-sm-4">
                     <a class="media">
-                        <img src="img/AZ monogram.jpg" alt="work" class="media-img">
+                        <img src="img/az monogram.jpg" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p>Logo</p>
+                                <p>AZ Monogram.</p>
                             </div>
                         </div>
                     </a>
@@ -47,11 +44,11 @@
 
                 <div class="col-sm-4">
                     <a class="media">
-                        <img src="img/AZ monogram.jpg" alt="work" class="media-img">
+                        <img src="img/tofy badge.png" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p>Logo</p>
+                                <p>TOFY Logo.</p>
                             </div>
                         </div>
                     </a>
@@ -59,11 +56,11 @@
 
                 <div class="col-sm-4">
                     <a class="media">
-                        <img src="img/AZ monogram.jpg" alt="work" class="media-img">
+                        <img src="img/tofy logo.jpg" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p>Logo</p>
+                                <p>TOFY Logo.</p>
                             </div>
                         </div>
                     </a>
@@ -73,11 +70,11 @@
             <div class="row">
                 <div class="col-sm-4">
                     <a class="media">
-                        <img src="img/AZ monogram.jpg" alt="work" class="media-img">
+                        <img src="img/mykri logo.jpg" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p>Logo</p>
+                                <p>Mykri Logo.</p>
                             </div>
                         </div>
                     </a>
@@ -85,11 +82,11 @@
 
                 <div class="col-sm-4">
                     <a class="media">
-                        <img src="img/AZ monogram.jpg" alt="work" class="media-img">
+                        <img src="img/amped logo.jpg" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p>Logo</p>
+                                <p>Amped Music Night.</p>
                             </div>
                         </div>
                     </a>
@@ -97,11 +94,11 @@
 
                 <div class="col-sm-4">
                     <a class="media">
-                        <img src="img/AZ monogram.jpg" alt="work" class="media-img">
+                        <img src="img/vinyl.png" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p>Logo</p>
+                                <p>Tame Impala Vinyl Cover.</p>
                             </div>
                         </div>
                     </a>
@@ -110,9 +107,7 @@
         </div>
 
         <footer>
-          <p>&copy; Matthew Goodyear 2017</p>
-          <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
-          <i class="fa fa-500px fa-3x" aria-hidden="true"></i>
+
         </footer>
 
     </body>
