--- a/index.html
+++ b/index.html
@@ -104,10 +104,16 @@
                     </a>
                 </div>
             </div>
+
+            <div class="row">
+              <a class="col-md-3 col-sm-4 col-xs-12 insta-button" href="https://www.instagram.com/matthewgoodyear/">
+                <p>Keep updated!</p>
+              </a>
+            </div>
         </div>
 
         <footer>
-
+          
         </footer>
 
     </body>
