--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <!-- Fonts -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
+        <script src="https://use.fontawesome.com/43b23a385d.js"></script>
+
         <!-- CSS -->
         <link rel="stylesheet" type="text/css" href="css/flexboxgrid.css">
         <link rel="stylesheet" type="text/css" href="css/main.css">
@@ -113,7 +115,17 @@
         </div>
 
         <footer>
-          
+            <div class="row center-xs">
+              <div class="col-xs-3 left-col">
+                <img src="img/mg monogram.jpg" alt="work" class="media-img">
+                <p>&copy; Matthew Goodyear 2017</p>
+              </div>
+
+              <div class="col-xs-3">
+                <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
+                <i class="fa fa-500px fa-3x" aria-hidden="true"></i>
+              </div>
+            </div>
         </footer>
 
     </body>
