--- a/index.html
+++ b/index.html
@@ -107,24 +107,39 @@
                 </div>
             </div>
 
-            <div class="row">
+            <!--<div class="row">
               <a class="col-md-3 col-sm-4 col-xs-12 insta-button" href="https://www.instagram.com/matthewgoodyear/">
                 <p>Keep updated!</p>
               </a>
+            </div>-->
+        </div>
+
+        <div class="about">
+          <h1>About</h1>
+          <hr>
+          <p>Hi, I'm a Graphic Designer based in Middlesbrough, UK.</p>
+
+          <h1>Contact</h1>
+          <hr>
+          <p>I'm available for freelance projects, you can contact me via <a href="#">Email</a> or <a href="https://www.instagram.com/matthewgoodyear/">Instagram</a></p>
+
+          <div class="row center-xs">
+            <div class="col-xs-12 col-sm-3">
+              <a class="fa fa-instagram fa-3x icons" aria-hidden="true" href="https://www.instagram.com/matthewgoodyear/"></a>
+              <a class="fa fa-500px fa-3x icons" aria-hidden="true" href="https://500px.com/matthewgoodyear"></a>
+              <a class="fa fa-envelope-o fa-3x icons" aria-hidden="true" href="https://500px.com/matthewgoodyear"></a>
             </div>
+          </div>
         </div>
 
         <footer>
             <div class="row center-xs">
-              <div class="col-xs-3 left-col">
+              <div class="col-xs-3">
                 <img src="img/mg monogram.jpg" alt="work" class="media-img">
                 <p>&copy; Matthew Goodyear 2017</p>
               </div>
 
-              <div class="col-xs-3">
-                <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
-                <i class="fa fa-500px fa-3x" aria-hidden="true"></i>
-              </div>
+
             </div>
         </footer>
 
