--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         </header>
 
         <div class="wrapper">
+            <h1>Work</h1>
+            <hr>
+
             <div class="row">
                 <div class="col-sm-4">
                     <a class="media">
@@ -50,7 +53,7 @@
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p>TOFY Logo.</p>
+                                <p>TOFY Badge.</p>
                             </div>
                         </div>
                     </a>
@@ -121,7 +124,7 @@
 
           <h1>Contact</h1>
           <hr>
-          <p>I'm available for freelance projects, you can contact me via <a href="#">Email</a> or <a href="https://www.instagram.com/matthewgoodyear/">Instagram</a></p>
+          <p>I'm available for freelance projects, you can contact me via <a href="mailto:hello@matthewgoodyear.com?">Email</a> or <a href="https://www.instagram.com/matthewgoodyear/">Instagram</a>.</p>
 
           <div class="row center-xs">
             <div class="col-xs-12 col-sm-3">
