--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="row">
                 <div class="col-sm-4">
                     <a class="media">
-                        <img src="img/az monogram.jpg" alt="work" class="media-img">
+                        <img src="img/azmonogram.jpg" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
