--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
           <h1>Contact</h1>
           <hr>
-          <p>I'm available for freelance projects, you can contact me via <a href="mailto:hello@matthewgoodyear.com">Email</a> or <a href="https://www.instagram.com/matthewgoodyear/">Instagram</a>.</p>
+          <p>I'm available for freelance projects, get in touch via <a href="mailto:hello@matthewgoodyear.com">Email</a> or <a href="https://www.instagram.com/matthewgoodyear/">Instagram</a>.</p>
 
           <div class="row center-xs">
             <div class="col-sm-4">
