project pages start

--- a/project-miscom.html
+++ b/project-miscom.html
@@ -39,82 +39,21 @@
         </header>
 
         <div class="wrapper">
-            <h1>Projects</h1>
+            <h1>Miscommunication</h1>
             <hr>
+            <p class="project-desc">Miscommunication is an experimental typography piece intended to show how technology has affected our ability to communicate effectively in person. </p>
 
             <div class="row">
                 <div class="col-sm-4">
-                    <a class="media" href="project-az.html">
-                        <img src="img/azmonogram.jpg" alt="work" class="media-img">
-
-                        <div class="media-overlay">
-                            <div class="media-overlay-content">
-                                <p>AZ Monogram.</p>
-                            </div>
-                        </div>
-                    </a>
+                      <img src="img/miscom-1.jpg" alt="work" class="media-img">
                 </div>
 
                 <div class="col-sm-4">
-                    <a class="media" href="project-tofy.html">
-                        <img src="img/tofy badge.png" alt="work" class="media-img">
-
-                        <div class="media-overlay">
-                            <div class="media-overlay-content">
-                                <p>TOFY Branding.</p>
-                            </div>
-                        </div>
-                    </a>
+                      <img src="img/miscom-2.jpg" alt="work" class="media-img">
                 </div>
 
                 <div class="col-sm-4">
-                    <a class="media" href="project-miscom.html">
-                        <img src="img/miscommunication.jpg" alt="work" class="media-img">
-
-                        <div class="media-overlay">
-                            <div class="media-overlay-content">
-                                <p>Miscommunication.</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-4">
-                    <a class="media" href="project-mykri.html">
-                        <img src="img/mykri logo.jpg" alt="work" class="media-img">
-
-                        <div class="media-overlay">
-                            <div class="media-overlay-content">
-                                <p>Mykri Branding.</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="col-sm-4">
-                    <a class="media" href="project-amped.html">
-                        <img src="img/amped logo.jpg" alt="work" class="media-img">
-
-                        <div class="media-overlay">
-                            <div class="media-overlay-content">
-                                <p>Amped Music Night.</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="col-sm-4">
-                    <a class="media" href="project-vinyl.html">
-                        <img src="img/vinyl.png" alt="work" class="media-img">
-
-                        <div class="media-overlay">
-                            <div class="media-overlay-content">
-                                <p>Tame Impala Vinyl Cover.</p>
-                            </div>
-                        </div>
-                    </a>
+                      <img src="img/miscom-3.jpg" alt="work" class="media-img">
                 </div>
             </div>
         </div>
