--- a/project-tofy.html
+++ b/project-tofy.html
@@ -39,12 +39,13 @@
         </header>
 
         <div class="wrapper">
-            <h1>Projects</h1>
+            <h1>TOFY Branding</h1>
             <hr>
+            <p class="project-desc">Hi, I'm a Graphic Designer based in Middlesbrough, UK.</p>
 
             <div class="row">
                 <div class="col-sm-4">
-                    <a class="media" href="project-az.html">
+                    <a class="media">
                         <img src="img/azmonogram.jpg" alt="work" class="media-img">
 
                         <div class="media-overlay">
@@ -56,62 +57,24 @@
                 </div>
 
                 <div class="col-sm-4">
-                    <a class="media" href="project-tofy.html">
-                        <img src="img/tofy badge.png" alt="work" class="media-img">
+                    <a class="media">
+                        <img src="img/azmonogram.jpg" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p>TOFY Branding.</p>
+                                <p>AZ Monogram.</p>
                             </div>
                         </div>
                     </a>
                 </div>
 
                 <div class="col-sm-4">
-                    <a class="media" href="project-miscom.html">
-                        <img src="img/miscommunication.jpg" alt="work" class="media-img">
+                    <a class="media">
+                        <img src="img/azmonogram.jpg" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p>Miscommunication.</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-4">
-                    <a class="media" href="project-mykri.html">
-                        <img src="img/mykri logo.jpg" alt="work" class="media-img">
-
-                        <div class="media-overlay">
-                            <div class="media-overlay-content">
-                                <p>Mykri Branding.</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="col-sm-4">
-                    <a class="media" href="project-amped.html">
-                        <img src="img/amped logo.jpg" alt="work" class="media-img">
-
-                        <div class="media-overlay">
-                            <div class="media-overlay-content">
-                                <p>Amped Music Night.</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="col-sm-4">
-                    <a class="media" href="project-vinyl.html">
-                        <img src="img/vinyl.png" alt="work" class="media-img">
-
-                        <div class="media-overlay">
-                            <div class="media-overlay-content">
-                                <p>Tame Impala Vinyl Cover.</p>
+                                <p>AZ Monogram.</p>
                             </div>
                         </div>
                     </a>
