Add project files

--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
                 --><div class="name name-right">goodyear</div>
             </div>
 
-            <img src="img/logo.jpg" alt="Logo" class="logo-img">
+            <div class="logo-container">
+                <a class="logo-link" href="/">
+                    <img src="img/logo.jpg" alt="Logo" class="logo-img">
+                </a>
+            </div>
         </header>
 
         <div class="wrapper">
@@ -44,36 +48,36 @@
 
             <div class="row">
                 <div class="col-sm-4">
-                    <a class="media" href="project-az.html">
+                    <a class="media" href="/project/az">
                         <img src="img/azmonogram.jpg" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p>AZ Monogram.</p>
+                                <p>AZ Monogram</p>
                             </div>
                         </div>
                     </a>
                 </div>
 
                 <div class="col-sm-4">
-                    <a class="media" href="project-tofy.html">
+                    <a class="media" href="/project/tofy">
                         <img src="img/tofy badge.png" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p>TOFY Branding.</p>
+                                <p>TOFY Branding</p>
                             </div>
                         </div>
                     </a>
                 </div>
 
                 <div class="col-sm-4">
-                    <a class="media" href="project-miscom.html">
+                    <a class="media" href="/project/miscom">
                         <img src="img/miscommunication.jpg" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p>Miscommunication.</p>
+                                <p>Miscommunication</p>
                             </div>
                         </div>
                     </a>
@@ -82,36 +86,36 @@
 
             <div class="row">
                 <div class="col-sm-4">
-                    <a class="media" href="project-mykri.html">
+                    <a class="media" href="/project/mykri">
                         <img src="img/mykri logo.jpg" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p>Mykri Branding.</p>
+                                <p>Mykri Branding</p>
                             </div>
                         </div>
                     </a>
                 </div>
 
                 <div class="col-sm-4">
-                    <a class="media" href="project-amped.html">
+                    <a class="media" href="/project/amped">
                         <img src="img/amped logo.jpg" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p>Amped Music Night.</p>
+                                <p>Amped Music Night</p>
                             </div>
                         </div>
                     </a>
                 </div>
 
                 <div class="col-sm-4">
-                    <a class="media" href="project-vinyl.html">
+                    <a class="media" href="/project/vinyl">
                         <img src="img/vinyl.png" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p>Tame Impala Vinyl Cover.</p>
+                                <p>Tame Impala Vinyl Cover</p>
                             </div>
                         </div>
                     </a>
@@ -120,31 +124,30 @@
         </div>
 
         <div class="about">
-          <h1>About</h1>
-          <hr>
-          <p>Hi, I'm a Graphic Designer based in Middlesbrough, UK.</p>
+            <h1>About</h1>
+            <hr>
+            <p>Hi, I'm a Graphic Designer based in Middlesbrough, UK.</p>
 
-          <h1>Contact</h1>
-          <hr>
-          <p>I'm available for freelance projects, get in touch via <a href="mailto:hello@matthewgoodyear.com">Email</a> or <a href="https://www.instagram.com/matthewgoodyear/">Instagram</a>.</p>
+            <h1>Contact</h1>
+            <hr>
+            <p>I'm available for freelance projects, get in touch via <a href="mailto:hello@matthewgoodyear.com">Email</a> or <a href="https://www.instagram.com/matthewgoodyear/">Instagram</a>.</p>
 
-          <div class="row center-xs">
-            <div class="col-sm-4">
-              <a class="fa fa-instagram fa-3x icons" aria-hidden="true" href="https://www.instagram.com/matthewgoodyear/"></a>
-              <a class="fa fa-500px fa-3x icons" aria-hidden="true" href="https://500px.com/matthewgoodyear"></a>
-              <a class="fa fa-envelope-o fa-3x icons" aria-hidden="true" href="mailto:hello@matthewgoodyear.com"></a>
+            <div class="row center-xs">
+                <div class="col-sm-4">
+                    <a class="fa fa-instagram fa-3x icons" aria-hidden="true" href="https://www.instagram.com/matthewgoodyear/"></a>
+                    <a class="fa fa-500px fa-3x icons" aria-hidden="true" href="https://500px.com/matthewgoodyear"></a>
+                    <a class="fa fa-envelope-o fa-3x icons" aria-hidden="true" href="mailto:hello@matthewgoodyear.com"></a>
+                </div>
             </div>
-          </div>
         </div>
 
         <footer>
             <div class="row center-xs">
-              <div class="col-xs-3">
-                <img src="img/mg monogram.jpg" alt="work" class="media-img">
-                <p>&copy; Matthew Goodyear 2017</p>
-              </div>
+                <div class="col-xs-3">
+                    <img src="img/mg monogram.jpg" alt="work" class="media-img">
+                    <p>&copy; Matthew Goodyear 2017</p>
+                </div>
             </div>
         </footer>
-
     </body>
 </html>
