project pages update

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <footer>
             <div class="row center-xs">
                 <div class="col-xs-3">
-                    <img src="img/mg monogram.jpg" alt="work" class="media-img">
+                    <img src="img/mg-monogram.jpg" alt="work" class="media-img">
                     <p>&copy; Matthew Goodyear 2017</p>
                 </div>
             </div>
