added project images

--- a/project/tofy/index.html
+++ b/project/tofy/index.html
@@ -46,19 +46,15 @@
         <div class="wrapper">
             <h1>TOFY Branding</h1>
             <hr>
-            <p class="project-desc">Miscommunication is an experimental typography piece intended to show how technology has affected our ability to communicate effectively. </p>
+            <p class="project-desc"></p>
 
             <div class="row">
-                <div class="col-sm-4">
-                      <img src="../../img/miscom-1.jpg" alt="work" class="media-img">
+                <div class="col-sm-6">
+                      <img src="../../img/tofy-badge.png" alt="work" class="media-img">
                 </div>
 
-                <div class="col-sm-4">
-                      <img src="../../img/miscom-2.jpg" alt="work" class="media-img">
-                </div>
-
-                <div class="col-sm-4">
-                      <img src="../../img/miscom-3.jpg" alt="work" class="media-img">
+                <div class="col-sm-6">
+                      <img src="../../img/tofy-logo.jpg" alt="work" class="media-img">
                 </div>
             </div>
         </div>
