--- a/project/vinyl/index.html
+++ b/project/vinyl/index.html
@@ -46,19 +46,35 @@
         <div class="wrapper">
             <h1>Tame Impala Vinyl</h1>
             <hr>
-            <p class="project-desc">Miscommunication is an experimental typography piece intended to show how technology has affected our ability to communicate effectively. </p>
+            <p class="project-desc"></p>
+
+            <div class="row">
+                <div class="col-sm-12">
+                      <img src="../../img/vinyl/vinyl.png" alt="work" class="media-img project-img">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-6">
+                      <img src="../../img/vinyl/booklet1.jpg" alt="work" class="media-img project-img">
+                </div>
+
+                <div class="col-sm-6">
+                      <img src="../../img/vinyl/booklet2.jpg" alt="work" class="media-img project-img">
+                </div>
+            </div>
 
             <div class="row">
                 <div class="col-sm-4">
-                      <img src="../../img/miscom-1.jpg" alt="work" class="media-img">
+                      <img src="../../img/vinyl/design1.png" alt="work" class="media-img project-img">
                 </div>
 
                 <div class="col-sm-4">
-                      <img src="../../img/miscom-2.jpg" alt="work" class="media-img">
+                      <img src="../../img/vinyl/design2.png" alt="work" class="media-img project-img">
                 </div>
 
                 <div class="col-sm-4">
-                      <img src="../../img/miscom-3.jpg" alt="work" class="media-img">
+                      <img src="../../img/vinyl/design3.png" alt="work" class="media-img project-img">
                 </div>
             </div>
         </div>
