--- a/project/amped/index.html
+++ b/project/amped/index.html
@@ -44,21 +44,31 @@
 
 
         <div class="wrapper">
-            <h1>Amped Music Night</h1>
+            <h1>Amped Branding</h1>
             <hr>
-            <p class="project-desc">Miscommunication is an experimental typography piece intended to show how technology has affected our ability to communicate effectively. </p>
+            <p class="project-desc">My first branding assignment I was tasked to develop a logo for music night, Amped. For my design I created a simplistic icon that took the basic shape of a flying v guitar and combined this with the letter 'A'.</p>
+
+            <div class="row">
+                <div class="col-sm-6">
+                      <img src="../../img/amped-icon.jpg" alt="work" class="media-img project-img">
+                </div>
+
+                <div class="col-sm-6">
+                      <img src="../../img/amped-logo.jpg" alt="work" class="media-img project-img">
+                </div>
+            </div>
 
             <div class="row">
                 <div class="col-sm-4">
-                      <img src="../../img/miscom-1.jpg" alt="work" class="media-img">
+                      <img src="../../img/amped-t1.jpg" alt="work" class="media-img project-img">
                 </div>
 
                 <div class="col-sm-4">
-                      <img src="../../img/miscom-2.jpg" alt="work" class="media-img">
+                      <img src="../../img/amped-t4.jpg" alt="work" class="media-img project-img">
                 </div>
 
                 <div class="col-sm-4">
-                      <img src="../../img/miscom-3.jpg" alt="work" class="media-img">
+                      <img src="../../img/amped-t3.jpg" alt="work" class="media-img project-img">
                 </div>
             </div>
         </div>
