--- a/project/miscom/index.html
+++ b/project/miscom/index.html
@@ -50,15 +50,15 @@
 
             <div class="row">
                 <div class="col-sm-4">
-                      <img src="../../img/miscom-1.jpg" alt="work" class="media-img">
+                      <img src="../../img/miscom-1.jpg" alt="work" class="media-img project-img">
                 </div>
 
                 <div class="col-sm-4">
-                      <img src="../../img/miscom-2.jpg" alt="work" class="media-img">
+                      <img src="../../img/miscom-2.jpg" alt="work" class="media-img project-img">
                 </div>
 
                 <div class="col-sm-4">
-                      <img src="../../img/miscom-3.jpg" alt="work" class="media-img">
+                      <img src="../../img/miscom-3.jpg" alt="work" class="media-img project-img">
                 </div>
             </div>
         </div>
