more project page updates

--- a/project/az/index.html
+++ b/project/az/index.html
@@ -44,21 +44,13 @@
 
 
         <div class="wrapper">
-            <h1>AZ Monogram</h1>
+            <h1>Monograms</h1>
             <hr>
-            <p class="project-desc">Miscommunication is an experimental typography piece intended to show how technology has affected our ability to communicate effectively. </p>
+            <p class="project-desc">This is a personal project aimed at bettering my design skills by creating various monograms, all based on a minimal design style. Follow me on <a href="https://www.instagram.com/matthewgoodyear/" class="social-link">Instagram</a> to be updated on new designs.</p>
 
-            <div class="row">
+            <div class="row center-xs">
                 <div class="col-sm-4">
-                      <img src="../../img/miscom-1.jpg" alt="work" class="media-img">
-                </div>
-
-                <div class="col-sm-4">
-                      <img src="../../img/miscom-2.jpg" alt="work" class="media-img">
-                </div>
-
-                <div class="col-sm-4">
-                      <img src="../../img/miscom-3.jpg" alt="work" class="media-img">
+                      <img src="../../img/azmonogram.jpg" alt="work" class="media-img project-img">
                 </div>
             </div>
         </div>
