--- a/project/tofy/index.html
+++ b/project/tofy/index.html
@@ -46,15 +46,25 @@
         <div class="wrapper">
             <h1>TOFY Branding</h1>
             <hr>
-            <p class="project-desc"></p>
+            <p class="project-desc">The Over Fifties Youth Club is an organisation intended to give people over the age of 50 new experiences to keep them active. The brief I was given was to create a new logo and ways of advertising the club.</p>
 
             <div class="row">
                 <div class="col-sm-6">
-                      <img src="../../img/tofy-badge.png" alt="work" class="media-img">
+                      <img src="../../img/tofy-badge.png" alt="work" class="media-img project-img">
                 </div>
 
                 <div class="col-sm-6">
-                      <img src="../../img/tofy-logo.jpg" alt="work" class="media-img">
+                      <img src="../../img/tofy-logo.jpg" alt="work" class="media-img project-img">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-8">
+                      <img src="../../img/tofy-insta.jpg" alt="work" class="media-img project-img">
+                </div>
+
+                <div class="col-sm-4">
+                      <img src="../../img/tofy-mockup.jpg" alt="work" class="media-img project-img">
                 </div>
             </div>
         </div>
