--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                 <div class="col-sm-4">
                     <a class="media" href="/project/tofy">
-                        <img src="img/tofy badge.png" alt="work" class="media-img">
+                        <img src="img/tofy-badge.png" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
@@ -87,7 +87,7 @@
             <div class="row">
                 <div class="col-sm-4">
                     <a class="media" href="/project/mykri">
-                        <img src="img/mykri logo.jpg" alt="work" class="media-img">
+                        <img src="img/mykri-logo.jpg" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
@@ -99,7 +99,7 @@
 
                 <div class="col-sm-4">
                     <a class="media" href="/project/amped">
-                        <img src="img/amped logo.jpg" alt="work" class="media-img">
+                        <img src="img/amped-logo.jpg" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
