images and meta

--- a/project/tofy/index.html
+++ b/project/tofy/index.html
@@ -3,8 +3,9 @@
         <!-- Meta -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
 
-        <title>Matthew Goodyear</title>
+        <title>Matthew Goodyear | TOFY Branding</title>
 
         <!-- Fonts -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
@@ -59,11 +60,11 @@
             </div>
 
             <div class="row">
-                <div class="col-sm-8">
+                <div class="col-sm-5">
                       <img src="../../img/tofy-insta.jpg" alt="work" class="media-img project-img">
                 </div>
 
-                <div class="col-sm-4">
+                <div class="col-sm-7">
                       <img src="../../img/tofy-mockup.jpg" alt="work" class="media-img project-img">
                 </div>
             </div>
