--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
         <!-- Meta -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Hi I'm Matthew, I'm a Graphic Designer based in Middlesbrough, UK.">
 
-        <title>Matthew Goodyear</title>
+        <title>Matthew Goodyear | Graphic Designer</title>
 
         <!-- Fonts -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
@@ -53,7 +54,7 @@
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p>AZ Monogram</p>
+                                <p>Monograms</p>
                             </div>
                         </div>
                     </a>
