--- a/project/vinyl/index.html
+++ b/project/vinyl/index.html
@@ -3,8 +3,9 @@
         <!-- Meta -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
 
-        <title>Matthew Goodyear</title>
+        <title>Matthew Goodyear | Tame Impala Vinyl</title>
 
         <!-- Fonts -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
