--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
             <div class="row">
                 <div class="col-sm-4">
-                    <a class="media" href="/project/az">
+                    <a class="media" href="/project/monograms">
                         <img src="img/azmonogram.jpg" alt="work" class="media-img">
 
                         <div class="media-overlay">
@@ -87,24 +87,24 @@
 
             <div class="row">
                 <div class="col-sm-4">
-                    <a class="media" href="/project/mykri">
-                        <img src="img/mykri-logo.jpg" alt="work" class="media-img">
-
-                        <div class="media-overlay">
-                            <div class="media-overlay-content">
-                                <p>Mykri Branding</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="col-sm-4">
                     <a class="media" href="/project/amped">
                         <img src="img/amped-logo.jpg" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
                                 <p>Amped Music Night</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-sm-4">
+                    <a class="media" href="/project/sheffield">
+                        <img src="img/sheffield.jpg" alt="work" class="media-img">
+
+                        <div class="media-overlay">
+                            <div class="media-overlay-content">
+                                <p>Sheffield Branding</p>
                             </div>
                         </div>
                     </a>
