--- a/project/sheffield/index.html
+++ b/project/sheffield/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
 
-        <title>Matthew Goodyear | Mykri Branding</title>
+        <title>Matthew Goodyear | Sheffield Branding</title>
 
         <!-- Fonts -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
@@ -45,21 +45,23 @@
 
 
         <div class="wrapper">
-            <h1>Mykri Branding</h1>
+            <h1>Sheffield Branding</h1>
             <hr>
-            <p class="project-desc">Miscommunication is an experimental typography piece intended to show how technology has affected our ability to communicate effectively. </p>
+            <p class="project-desc"></p>
 
             <div class="row">
-                <div class="col-sm-4">
-                      <img src="../../img/miscom-1.jpg" alt="work" class="media-img">
+                <div class="col-sm-6">
+                      <img src="../../img/sheffield.jpg" alt="work" class="media-img project-img">
                 </div>
 
-                <div class="col-sm-4">
-                      <img src="../../img/miscom-2.jpg" alt="work" class="media-img">
+                <div class="col-sm-6">
+                      <img src="../../img/sheffield-2.jpg" alt="work" class="media-img project-img">
                 </div>
+            </div>
 
-                <div class="col-sm-4">
-                      <img src="../../img/miscom-3.jpg" alt="work" class="media-img">
+            <div class="row">
+                <div class="col-sm-12">
+                      <img src="../../img/sheffield-sign.jpg" alt="work" class="media-img project-img">
                 </div>
             </div>
         </div>
