--- a/project/sheffield/index.html
+++ b/project/sheffield/index.html
@@ -47,7 +47,7 @@
         <div class="wrapper">
             <h1>Sheffield Branding</h1>
             <hr>
-            <p class="project-desc">This was my most challeging breif in which I was tasked to create a brand for Sheffield. Sheffield is known as the Steel City and I designed different icons that relate to this as well as using the basic shape from the coat of arms.</p>
+            <p class="project-desc">This was my most challenging brief, in which I was tasked to create a brand for Sheffield. Sheffield is known as the Steel City; I designed different icons that relate to this, as well as using the basic shape from the coat of arms.</p>
 
             <div class="row">
                 <div class="col-sm-6">
